Fixed line break on css and updated profile picture

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3018,10 +3018,6 @@ button:focus{
 					font-size: 1.25em;
 				}
 
-					#header h1 br {
-						display: none;
-					}
-
 				#header > .inner {
 					margin-bottom: 0;
 				}
